--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,19 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    ".next/types/app/page.tsx",
+    ".next/types/app/units/page.tsx",
+    ".next/types/app/product/page.tsx",
+    ".next/types/app/product/rib/page.tsx",
+    ".next/types/app/product/jaquard/page.tsx",
+    ".next/types/app/product/elastic/page.tsx",
+    ".next/types/app/product/drawstring/page.tsx",
+    ".next/types/app/product/belt/page.tsx"
+  ],
   "exclude": ["node_modules"]
 }
